<resources>
    <string name="app_name">DZ_2_7_Rick_and_Morty_Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">GenderLess</string>
    <string name="unknown">unknown</string>
    <string name="apply">Apply</string>
    <string name="status">Status</string>
    <string name="unknownn">Unknown</string>
</resources>